--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-register": "^6.24.1",
+    "chalk": "^2.3.0",
     "cron": "^1.3.0",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
