--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-register": "^6.24.1",
     "chalk": "^2.3.0",
+    "common-tags": "^1.7.2",
     "cron": "^1.3.0",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
