--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,8 @@
 # ask @BotFather for new token
 BOT_TOKEN=
 
+# developer's chat id, for errors
+DEV_CHAT=108562525
+
 # template of instant view
 LINK=https://t.me/iv?url=http%3A%2F%2Fwhitehall.spbstu.ru{}%2F&rhash=8f2d1da2cbf97c
