--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
     "chalk": "^2.3.0",
     "cron": "^1.3.0",
